kubernetes-manifests/K8sdemo_noagent.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emailservice-noagent
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: otel-demo-noagent
      app.kubernetes.io/instance: otel-demo-emailservice-noagent
      app.kubernetes.io/component: emailservice-noagent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: otel-demo-noagent
        app.kubernetes.io/instance: otel-demo-emailservice-noagent
        app.kubernetes.io/component: emailservice-noagent
      annotations:
        sidecar.opentelemetry.io/inject: "true"
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: emailservice-noagent
          image: otel/demo:VERSION_TO_REPLACE-emailservice
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 80m
              memory: 64Mi
            limits:
              cpu: 150m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: emailservice-noagent
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: otel-demo-noagent
    app.kubernetes.io/instance: otel-demo-emailservice-noagent
    app.kubernetes.io/component: emailservice-noagent
  ports:
    - name: grpc
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutservice-noagent
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: otel-demo-noagent
      app.kubernetes.io/instance: otel-demo-checkoutservice-noagent
      app.kubernetes.io/component: checkoutservice-noagent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: otel-demo-noagent
        app.kubernetes.io/instance: otel-demo-checkoutservice-noagent
        app.kubernetes.io/component: checkoutservice-noagent
      annotations:
        sidecar.opentelemetry.io/inject: "true"
    spec:
      containers:
        - name: checkoutservice-noagent
          image: otel/demo:VERSION_TO_REPLACE-checkoutservice
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 80m
              memory: 64Mi
            limits:
              cpu: 150m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: checkoutservice-noagent
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: otel-demo-noagent
    app.kubernetes.io/instance: otel-demo-checkoutservice-noagent
    app.kubernetes.io/component: checkoutservice-noagent
  ports:
    - name: grpc
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendationservice-noagent
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: otel-demo-noagent
      app.kubernetes.io/instance: otel-demo-recommendationservice-noagent
      app.kubernetes.io/component: recommendationservice-noagent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: otel-demo-noagent
        app.kubernetes.io/instance: otel-demo-recommendationservice-noagent
        app.kubernetes.io/component: recommendationservice-noagent
      annotations:
        sidecar.opentelemetry.io/inject: "true"
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: recommendationservice-noagent
          image: otel/demo:VERSION_TO_REPLACE-recommendationservice
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 80m
              memory: 220Mi
            limits:
              cpu: 150m
              memory: 450Mi
---
apiVersion: v1
kind: Service
metadata:
  name: recommendationservice-noagent
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: otel-demo-noagent
    app.kubernetes.io/instance: otel-demo-recommendationservice-noagent
    app.kubernetes.io/component: recommendationservice-noagent
  ports:
    - name: grpc
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-noagent
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: otel-demo-noagent
      app.kubernetes.io/instance: otel-demo-frontend-noagent
      app.kubernetes.io/component: frontend-noagent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: otel-demo-noagent
        app.kubernetes.io/instance: otel-demo-frontend-noagent
        app.kubernetes.io/component: frontend-noagent
      annotations:
        sidecar.opentelemetry.io/inject: "true"
    spec:
      containers:
        - name: frontend-noagent
          # both look good
          #image: registry.lab.dynatrace.org/cloudplatform/hipster-shop-frontend
          image: otel/demo:VERSION_TO_REPLACE-frontend
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 80m
              memory: 64Mi
            limits:
              cpu: 150m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-noagent
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: otel-demo-noagent
    app.kubernetes.io/instance: otel-demo-frontend-noagent
    app.kubernetes.io/component: frontend-noagent
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: otlphttp
      port: 4318
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: onlineboutique-ingress-noagent
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host :  "demo-noagent.IP_TO_REPLACE.nip.io"
      http:
        paths:
          - pathType: ImplementationSpecific
            path: "/"
            backend:
              service:
                name: frontend-noagent
                port:
                  number: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paymentservice-noagent
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: otel-demo-noagent
      app.kubernetes.io/instance: otel-demo-paymentservice-noagent
      app.kubernetes.io/component: paymentservice-noagent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: otel-demo-noagent
        app.kubernetes.io/instance: otel-demo-paymentservice-noagent
        app.kubernetes.io/component: paymentservice-noagent
      annotations:
        sidecar.opentelemetry.io/inject: "true"
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: paymentservice-noagent
          image: otel/demo:VERSION_TO_REPLACE-paymentservice
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 80m
              memory: 64Mi
            limits:
              cpu: 150m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: paymentservice-noagent
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: otel-demo-noagent
    app.kubernetes.io/instance: otel-demo-paymentservice-noagent
    app.kubernetes.io/component: paymentservice-noagent
  ports:
    - name: grpc
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productcatalogservice-noagent
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: otel-demo-noagent
      app.kubernetes.io/instance: otel-demo-productcatalogservice-noagent
      app.kubernetes.io/component: productcatalogservice-noagent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: otel-demo-noagent
        app.kubernetes.io/instance: otel-demo-productcatalogservice-noagent
        app.kubernetes.io/component: productcatalogservice-noagent
      annotations:
        sidecar.opentelemetry.io/inject: "true"
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: productcatalogservice-noagent
          # image: registry.lab.dynatrace.org/cloudplatform/hipster-shop-productcatalogservice
          image: otel/demo:VERSION_TO_REPLACE-productcatalogservice
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 80m
              memory: 64Mi
            limits:
              cpu: 150m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: productcatalogservice-noagent
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: otel-demo-noagent
    app.kubernetes.io/instance: otel-demo-productcatalogservice-noagent
    app.kubernetes.io/component: productcatalogservice-noagent
  ports:
    - name: grpc
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cartservice-noagent
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: otel-demo-noagent
      app.kubernetes.io/instance: otel-demo-cartservice-noagent
      app.kubernetes.io/component: cartservice-noagent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: otel-demo-noagent
        app.kubernetes.io/instance: otel-demo-cartservice-noagent
        app.kubernetes.io/component: cartservice-noagent
      annotations:
        sidecar.opentelemetry.io/inject: "true"
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: cartservice-noagent
          image: otel/demo:VERSION_TO_REPLACE-cartservice
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 150m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 512Mi

---
apiVersion: v1
kind: Service
metadata:
  name: cartservice-noagent
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: otel-demo-noagent
    app.kubernetes.io/instance: otel-demo-cartservice-noagent
    app.kubernetes.io/component: cartservice-noagent
  ports:
    - name: grpc
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgeneratorservice-noagent
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: otel-demo-noagent
      app.kubernetes.io/instance: otel-demo-loadgeneratorservice-noagent
      app.kubernetes.io/component: loadgeneratorservice-noagent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: otel-demo-noagent
        app.kubernetes.io/instance: otel-demo-loadgeneratorservice-noagent
        app.kubernetes.io/component: loadgeneratorservice-noagent
      annotations:
        sidecar.opentelemetry.io/inject: "true"
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: loadgeneratorservice-noagent
          image: otel/demo:VERSION_TO_REPLACE-loadgenerator
          imagePullPolicy: Always
          ports:
            - name: locust
              containerPort: 8089
          resources:
            requests:
              cpu: 80m
              memory: 64Mi
            limits:
              cpu: 150m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: loadgeneratorservice-noagent
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: otel-demo-noagent
    app.kubernetes.io/instance: otel-demo-loadgeneratorservice-noagent
    app.kubernetes.io/component: loadgeneratorservice-noagent
  ports:
    - name: locust
      port: 8089
      targetPort: 8089
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currencyservice-noagent
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: otel-demo-noagent
      app.kubernetes.io/instance: otel-demo-currencyservice-noagent
      app.kubernetes.io/component: currencyservice-noagent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: otel-demo-noagent
        app.kubernetes.io/instance: otel-demo-currencyservice-noagent
        app.kubernetes.io/component: currencyservice-noagent
      annotations:
        sidecar.opentelemetry.io/inject: "true"
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: currencyservice-noagent
          image: otel/demo:VERSION_TO_REPLACE-currencyservice
          imagePullPolicy: Always
          ports:
            - name: grpc
              containerPort: 8080
          resources:
            requests:
              cpu: 80m
              memory: 64Mi
            limits:
              cpu: 150m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: currencyservice-noagent
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: otel-demo-noagent
    app.kubernetes.io/instance: otel-demo-currencyservice-noagent
    app.kubernetes.io/component: currencyservice-noagent
  ports:
    - name: grpc
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shippingservice-noagent
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: otel-demo-noagent
      app.kubernetes.io/instance: otel-demo-shippingservice-noagent
      app.kubernetes.io/component: shippingservice-noagent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: otel-demo-noagent
        app.kubernetes.io/instance: otel-demo-shippingservice-noagent
        app.kubernetes.io/component: shippingservice-noagent
      annotations:
        sidecar.opentelemetry.io/inject: "true"
    spec:
      containers:
        - name: shippingservice-noagent
          image: otel/demo:VERSION_TO_REPLACE-shippingservice
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 80m
              memory: 64Mi
            limits:
              cpu: 150m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: shippingservice-noagent
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: otel-demo-noagent
    app.kubernetes.io/instance: otel-demo-shippingservice-noagent
    app.kubernetes.io/component: shippingservice-noagent
  ports:
    - name: grpc
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-noagent
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: otel-demo-noagent
      app.kubernetes.io/instance: otel-demo-redis-noagent
      app.kubernetes.io/component: redis-noagent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: otel-demo-noagent
        app.kubernetes.io/instance: otel-demo-redis-noagent
        app.kubernetes.io/component: redis-noagent
      annotations: # here we annotate the deployment to be scraped by dynatrace
        prometheus.io/port: '9121'
        prometheus.io/scrape: 'true'
        sidecar.opentelemetry.io/inject: "true"
    spec:
      containers:
        - name: redis-noagent
          image: redis:alpine
          ports:
            - containerPort: 6379
          readinessProbe:
            periodSeconds: 5
            tcpSocket:
              port: 6379
          livenessProbe:
            periodSeconds: 5
            tcpSocket:
              port: 6379
          volumeMounts:
            - mountPath: /data
              name: redis-data
          resources:
            limits:
              memory: 256Mi
              cpu: 125m
            requests:
              cpu: 70m
              memory: 200Mi
      volumes:
        - name: redis-data
          emptyDir: { }
---
apiVersion: v1
kind: Service
metadata:
  name: redis-noagent
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: otel-demo-noagent
    app.kubernetes.io/instance: otel-demo-redis-noagent
    app.kubernetes.io/component: redis-noagent
  ports:
    - name: redis
      port: 6379
      targetPort: 6379
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adservice-noagent
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: otel-demo-noagent
      app.kubernetes.io/instance: otel-demo-adservice-noagent
      app.kubernetes.io/component: adservice-noagent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: otel-demo-noagent
        app.kubernetes.io/instance: otel-demo-adservice-noagent
        app.kubernetes.io/component: adservice-noagent
      annotations:
        sidecar.opentelemetry.io/inject: "true"
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: adservice-noagent
          image: otel/demo:VERSION_TO_REPLACE-adservice
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 150m
              memory: 180Mi
            limits:
              cpu: 250m
              memory: 300Mi

---
apiVersion: v1
kind: Service
metadata:
  name: adservice-noagent
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: otel-demo-noagent
    app.kubernetes.io/instance: otel-demo-adservice-noagent
    app.kubernetes.io/component: adservice-noagent
  ports:
    - name: grpc
      port: 8080
      targetPort: 8080
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: featureflagservice
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: otel-demo-noagent
      app.kubernetes.io/instance: otel-demo-featureflagservice-noagent
      app.kubernetes.io/component: featureflagservice-noagent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: otel-demo-noagent
        app.kubernetes.io/instance: otel-demo-featureflagservice-noagent
        app.kubernetes.io/component: featureflagservice-noagent
      annotations:
        sidecar.opentelemetry.io/inject: "true"
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: featureflagservice-noagent
          image: otel/demo:VERSION_TO_REPLACE-featureflagservice
          imagePullPolicy: Always
          ports:
            - name: grpc
              containerPort: 50053
            - name: http
              containerPort: 8081
          resources:
            requests:
              cpu: 150m
              memory: 180Mi
            limits:
              cpu: 250m
              memory: 300Mi
---
apiVersion: v1
kind: Service
metadata:
  name: featureflagservice-noagent
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: otel-demo-noagent
    app.kubernetes.io/instance: otel-demo-featureflagservice-noagent
    app.kubernetes.io/component: featureflagservice-noagent
  ports:
    - name: grpc
      port: 50053
      targetPort: 50053
    - name: http
      port: 8081
      targetPort: 8081
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ffspostgres-noagent
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: otel-demo-noagent
      app.kubernetes.io/instance: otel-demo-ffsPostgres-noagent
      app.kubernetes.io/component: ffspostgres-noagent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: otel-demo-noagent
        app.kubernetes.io/instance: otel-demo-ffsPostgres-noagent
        app.kubernetes.io/component: ffspostgres-noagent
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: ffspostgres-noagent
          image: cimg/postgres:14.2
          imagePullPolicy: Always
          ports:
            - name: postgres
              containerPort: 5432
          resources:
            requests:
              cpu: 150m
              memory: 180Mi
            limits:
              cpu: 250m
              memory: 300Mi
---
apiVersion: v1
kind: Service
metadata:
  name: ffspostgres-noagent
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: otel-demo-noagent
    app.kubernetes.io/instance: otel-demo-ffsPostgres-noagent
    app.kubernetes.io/component: ffspostgres-noagent
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quoteservice-noagent
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: otel-demo-noagent
      app.kubernetes.io/instance: otel-demo-quoteservice-noagent
      app.kubernetes.io/component: quoteservice-noagent
  template:
    metadata:
      labels:
        app.kubernetes.io/name: otel-demo-noagent
        app.kubernetes.io/instance: otel-demo-quoteservice-noagent
        app.kubernetes.io/component: quoteservice-noagent
      annotations:
        sidecar.opentelemetry.io/inject: "true"
    spec:
      terminationGracePeriodSeconds: 5
      containers:
        - name: quoteservice-noagent
          image: otel/demo:VERSION_TO_REPLACE-quoteservice
          imagePullPolicy: Always
          ports:
            - name: quote
              containerPort: 8080
          resources:
            requests:
              cpu: 150m
              memory: 180Mi
            limits:
              cpu: 250m
              memory: 300Mi
---
apiVersion: v1
kind: Service
metadata:
  name: quoteservice-noagent
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: otel-demo-noagent
    app.kubernetes.io/instance: otel-demo-quoteservice-noagent
    app.kubernetes.io/component: quoteservice-noagent
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
